--- a/tsp/tsp.vcxproj.filters
+++ b/tsp/tsp.vcxproj.filters
@@ -14,4 +14,40 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="read_input.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="tsp.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="plot.c">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tsp.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="read_input.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="plot.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="att48.tsp">
+      <Filter>File di risorse</Filter>
+    </None>
+  </ItemGroup>
 </Project>
